2백그라운드 수정

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="csHeader" class="csh_main" >
         <div class="top_banner" >
-            <div class="top_banner_area" style="background:pink">
+            <div class="top_banner_area">
                 <h1><a href="http://www.chosunonline.com/" class="img_logo"  title="chosun Online"></a></h1>
                 <div class="gnb_menu_common">
                   <div class="sch_area">
