--- a/index.html
+++ b/index.html
@@ -194,52 +194,12 @@
         <!-- sec_tit -->
     
         <div class="sec_con">
-            <dl class="news_item thum">
-                <dd class="thumb">
-                    <a href="#none">
-                        <img src="images/art1_img.png" alt="기사이미지">
-                    </a>
-                </dd>
-                <dt>
-                    <a href="#none">정현에 밀린 '평화올림픽 vs. 평양올림픽' 실검 전쟁</a>
-                </dt>
-                <dd class="desc">
-                    <a href="#none">지금 인터넷에서는 ‘평화올림픽’과 ‘평양올림픽’이라는 단어가 ‘검색어 1위’를 두고 치열한 전쟁을 벌이고 있다. 문재인 대통령 생일을 맞아 일어..</a>
-                </dd>
+            <dl class="comt_item">
+                <dd class="thumb"><a href=""><img src="images/art3_img.png" alt="기사이미지"></a></dd>
+                <dd class="up_tit">건강</dd>
+                <dt><a href="">의사·간호사가 알려주는 '3분 진료 시간' 알차게 질문하는 법</a></dt>
             </dl>
-            <dl class="news_item">
-                <dt>
-                    <a href="#none">文대통령 지지율 56.7%… 60% 밑으로 첫 하락</a>
-                </dt>
-            </dl>
-            <dl class="news_item">
-                <dt>
-                    <a href="#none">北 자극할까봐… 정부, 태영호에 "활동 자제해달라</a>
-                </dt>
-            </dl>
-            <dl class="news_item thum">
-                <dd class="thumb">
-                    <a href="#none">
-                        <img src="images/art1_img.png" alt="기사이미지">
-                    </a>
-                </dd>
-                <dt>
-                    <a href="#none">'애플빠' 김정은… 그의 1위 검색어는 '김정은'</a>
-                </dt>
-                <dd class="desc">
-                    <a href="#none">평창 동계올림픽 공연을 위해 사전 답사차 한국을 찾은 현송월 북한 삼지연관현악단장이 공연을 위해 고가의 미국산 음향기기를 요청해서 논란이 됐다.</a>
-                </dd>
-            </dl>
-            <dl class="news_item">
-                <dt>
-                    <a href="#none">형 먼저 부르고 부인·가족 조사… 盧·MB수사 닮은꼴</a>
-                </dt>
-            </dl>
-            <dl class="news_item">
-                <dt>
-                    <a href="#none">文대통령 "올림픽 개막 전 여야 원내대표 초청 추진"</a>
-                </dt>
-            </dl>
+
     
         </div>
         <!-- sec_con -->
