--- a/index.html
+++ b/index.html
@@ -166,6 +166,26 @@
             </div><!-- sec_con -->
             
             <div class="sec_sub">
+                <div class="">
+                    <dl class="sub_circle_thum">
+                        <dd class="thumb"><a href="#none"><img src="images/ps_01.png" alt="기사이미지"></a></dd>
+                        <dt><a href="#none">매티스 판단에 맡겨진 한반도의 운명</a></dt>
+                        <dd class="tit"><a href="#none">김창균 칼럼</a></dd>
+                    </dl>
+                    <dl class="sub_circle_thum">
+                        <dd class="thumb"><a href="#none"><img src="images/ps_01.png" alt="기사이미지"></a></dd>
+                        <dt><a href="#none">매티스 판단에 맡겨진 한반도의 운명</a></dt>
+                        <dd class="tit"><a href="#none">김철중 의학전문기자·전문의</a></dd>
+                    </dl>
+                    <dl class="sub_circle_thum">
+                        <dt><a href="#none">이젠 金 아닌 銀메달 따고도 다들 기뻐하는 韓 선수들</a></dt>
+                        <dd class="tit"><a href="#none">민학수 논설위원·스포츠부 차장</a></dd>
+                    </dl>
+                    <dl class="sub_circle_thum">
+                        <dt><a href="#none">상금 없이 트로피만 주는 아카데미賞</a></dt>
+                        <dd class="tit"><a href="#none">정경원의 디자인 노트</a></dd>
+                    </dl>
+                </div>
                 <div class="rectbanner">
                     <script type="text/javascript"><!-- 
                     google_ad_client = "ca-pub-8912554504148064"; 
